# sound_system

./: LICENSE.md  Makefile  README.md  config.toml  switch-jack-tv.sh
dsp-profiles/office/: effects
effects/: wiosna77
sound-system/: pyproject.toml
sound-system/sound_system/: config.py
templates/: alsaloop.service  asound.conf  ladspa_dsp.conf  powerup-onkyo.sh  raspotify.conf  spotifyd.service
templates/alsa/: asound.conf
templates/onkyo-eiscp/: powerup-onkyo.sh
templates/spotifyd/: spotifyd.conf  spotifyd.service
