[tool.poetry]
name = "sound-system"
version = "0.1.0"
description = ""
authors = ["mtyszkiewicz <t.marcinn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.2"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
